--- a/portfolio.html
+++ b/portfolio.html
@@ -7,16 +7,16 @@
     <meta name="description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
     <meta name="author" content="Mohamed Amine Benkhalifa">
     <meta name="keywords" content="Portfolio, Bika, Projets, Créations, Design, Développement web">
-    <link rel="icon" href="icone.png" type="image/png">
+    <link rel="icon" href="icon192.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Portfolio.html">
+    <link rel="canonical" href="https://el-bika.github.io/archi-tp/portfolio.html">
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Portfolio de Bika - Projets et Créations">
     <meta property="og:description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
     <meta property="og:image" content="Portfolio_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/portfolio.html">
+    <meta property="og:url" content="https://el-bika.github.io/archi-tp/portfolio.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
@@ -24,6 +24,9 @@
     <meta name="twitter:title" content="Portfolio de Bika - Projets et Créations">
     <meta name="twitter:description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
     <meta name="twitter:image" content="Portfolio_Thumbnail.jpg">
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header>
@@ -41,78 +44,80 @@
         </nav>
     </header>
 
-    <section id="portfolio" class="portfolio-section">
-        <div class="section-title">
-            <h1>Mon Portfolio</h1>
-            <p>Découvrez mes projets récents et créations personnelles.</p>
-        </div>
-
-        <div class="portfolio-grid">
-            <div class="portfolio-item">
-                <img src="ALA.png" alt="Projet 1" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Affiche A.L.A - Illustrator + Photoshop</h3>
-                    <p>L'affiche du clip "AIINA" d'A.L.A adopte une esthétique rétro tropicale avec des couleurs vives, mettant en valeur l'artiste au centre et un design moderne, tout en incluant des informations professionnelles.</p>
-                </div>
+    <main>
+        <section id="portfolio" class="portfolio-section">
+            <div class="section-title">
+                <h1>Mon Portfolio</h1>
+                <p>Découvrez mes projets récents et créations personnelles.</p>
             </div>
 
-            <div class="portfolio-item">
-                <img src="BOOK.png" alt="Projet 2" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Cover The Wild Ocean - Illustrator + Photoshop</h3>
-                    <p>L'affiche de "Wild Ocean" évoque l'exploration des océans avec un design dramatique mettant en avant la profondeur et la beauté de l'environnement sous-marin.</p>
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="ALA.png" alt="Affiche A.L.A - Illustrator + Photoshop" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Affiche A.L.A - Illustrator + Photoshop</h3>
+                        <p>L'affiche du clip "AIINA" d'A.L.A adopte une esthétique rétro tropicale avec des couleurs vives, mettant en valeur l'artiste au centre et un design moderne, tout en incluant des informations professionnelles.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item">
-                <img src="SHOPPLY.png" alt="Projet 3" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Shopply - Illustrator + Adobe Xd</h3>
-                    <p>Le design moderne et épuré de l'application Shopply offre une expérience de shopping fluide grâce à une interface intuitive.</p>
+                <div class="portfolio-item">
+                    <img src="BOOK.png" alt="Cover The Wild Ocean - Illustrator + Photoshop" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Cover The Wild Ocean - Illustrator + Photoshop</h3>
+                        <p>L'affiche de "Wild Ocean" évoque l'exploration des océans avec un design dramatique mettant en avant la profondeur et la beauté de l'environnement sous-marin.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item">
-                <img src="CARTE VISITE.png" alt="Projet 4" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Carte Visite Benkhalifa Consulting - Illustrator</h3>
-                    <p>Le logo de Benkhalifa Consulting représente l'interconnexion scientifique avec des éléments de design évoquant la précision et l'innovation.</p>
+                <div class="portfolio-item">
+                    <img src="SHOPPLY.png" alt="Shopply - Illustrator + Adobe Xd" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Shopply - Illustrator + Adobe Xd</h3>
+                        <p>Le design moderne et épuré de l'application Shopply offre une expérience de shopping fluide grâce à une interface intuitive.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item">
-                <img src="DECORIAT.png" alt="Projet 5" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Decoriat - Illustrator</h3>
-                    <p>Le design du site web Decoriat, minimaliste et moderne, met en valeur les produits et assure une expérience de navigation fluide et agréable.</p>
+                <div class="portfolio-item">
+                    <img src="CARTE VISITE.png" alt="Carte Visite Benkhalifa Consulting - Illustrator" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Carte Visite Benkhalifa Consulting - Illustrator</h3>
+                        <p>Le logo de Benkhalifa Consulting représente l'interconnexion scientifique avec des éléments de design évoquant la précision et l'innovation.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item">
-                <img src="DENTAL.png" alt="Projet 6" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Dental Art - Illustrator</h3>
-                    <p>Le logo de Dental Art combine des éléments modernes et épurés pour refléter l'expertise et la précision du laboratoire dentaire.</p>
+                <div class="portfolio-item">
+                    <img src="DECORIAT.png" alt="Decoriat - Illustrator" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Decoriat - Illustrator</h3>
+                        <p>Le design du site web Decoriat, minimaliste et moderne, met en valeur les produits et assure une expérience de navigation fluide et agréable.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item">
-                <img src="JOKER.png" alt="Projet 7" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Affiche Joker 2 - Illustrator + Photoshop</h3>
-                    <p>L'affiche de "Joker 2" allie l'énergie sombre du film à un style graphique arabe ancien, avec des couleurs vives et des portraits dramatiques.</p>
+                <div class="portfolio-item">
+                    <img src="DENTAL.png" alt="Dental Art - Illustrator" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Dental Art - Illustrator</h3>
+                        <p>Le logo de Dental Art combine des éléments modernes et épurés pour refléter l'expertise et la précision du laboratoire dentaire.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item">
-                <img src="TRAVIS.png" alt="Projet 8" class="portfolio-image" onclick="openModal(this)">
-                <div class="portfolio-info">
-                    <h3>Cover Travis Scott - Photoshop</h3>
-                    <p>La couverture d'album de Travis Scott met en avant l'artiste avec un texte liquide coloré et une texture brute, reflétant l'énergie de sa musique.</p>
+                <div class="portfolio-item">
+                    <img src="JOKER.png" alt="Affiche Joker 2 - Illustrator + Photoshop" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Affiche Joker 2 - Illustrator + Photoshop</h3>
+                        <p>L'affiche de "Joker 2" allie l'énergie sombre du film à un style graphique arabe ancien, avec des couleurs vives et des portraits dramatiques.</p>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img src="TRAVIS.png" alt="Cover Travis Scott - Photoshop" class="portfolio-image" onclick="openModal(this)">
+                    <div class="portfolio-info">
+                        <h3>Cover Travis Scott - Photoshop</h3>
+                        <p>La couverture d'album de Travis Scott met en avant l'artiste avec un texte liquide coloré et une texture brute, reflétant l'énergie de sa musique.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     
     <div id="projectModal" class="modal">
         <span class="close" onclick="closeModal()">&times;</span>
@@ -122,13 +127,23 @@
     <footer>
         <p>&copy; 2024 Bika. Tous droits réservés.</p>
         <div class="Suivez-moi">
-            <a href="https://github.com/El-bika/" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank">LinkedIn</a>
+            <a href="https://github.com/El-bika/" target="_blank" rel="nofollow">GitHub</a>
+            <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank" rel="nofollow">LinkedIn</a>
         </div>
         <div class="sitemap">
-            <a href="sitemap.xml">Sitemap</a>
+            <a href="sitemap.xml" rel="nofollow">Sitemap</a>
         </div>
     </footer>
+
     <script src="cv.js"></script>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCM280LP2Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-VCM280LP2Z');
+    </script>
 </body>
 </html>
