--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,16 @@
     <meta name="description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
     <meta name="author" content="Mohamed Amine Benkhalifa">
     <meta name="keywords" content="Contact, Bika, Développeur, Design, Web">
-    <link rel="icon" href="icone.png" type="image/png">
+    <link rel="icon" href="icon192.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/Contact.html">
+    <link rel="canonical" href="https://el-bika.github.io/archi-tp/contact.html">
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Contactez Bika - Développeur Web et Designer">
     <meta property="og:description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
     <meta property="og:image" content="Contact_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/contact.html">
+    <meta property="og:url" content="https://el-bika.github.io/archi-tp/contact.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
@@ -24,6 +24,9 @@
     <meta name="twitter:title" content="Contactez Bika - Développeur Web et Designer">
     <meta name="twitter:description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
     <meta name="twitter:image" content="Contact_Thumbnail.jpg">
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header>
@@ -41,38 +44,51 @@
         </nav>
     </header>
 
-    <section id="contact" class="contact-section">
-        <div class="section-title">
-            <h1>Contactez-moi</h1>
-            <p>Vous avez des questions ou des propositions ? N'hésitez pas à me contacter !</p>
-        </div>
+    <main>
+        <section id="contact" class="contact-section">
+            <div class="section-title">
+                <h1>Contactez-moi</h1>
+                <p>Vous avez des questions ou des propositions ? N'hésitez pas à me contacter !</p>
+            </div>
 
-        <form id="contact-form" action="submit_contact.php" method="POST">
-            <div class="form-group">
-                <label for="name">Nom</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-            </div>
-            <button type="submit">Envoyer</button>
-        </form>
-    </section>
+            <form id="contact-form" action="submit_contact.php" method="POST">
+                <div class="form-group">
+                    <label for="name">Nom</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit">Envoyer</button>
+            </form>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 Bika. Tous droits réservés.</p>
         <div class="Suivez-moi">
-            <a href="https://github.com/El-bika/" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank">LinkedIn</a>
+            <a href="https://github.com/El-bika/" target="_blank" rel="nofollow">GitHub</a>
+            <a href="https://www.linkedin.com/in/mohamed-amine-benkhalifa" target="_blank" rel="nofollow">LinkedIn</a>
         </div>
         <div class="sitemap">
-            <a href="sitemap.xml">Sitemap</a>
+            <a href="sitemap.xml" rel="nofollow">Sitemap</a>
         </div>
     </footer>
+
+    <script src="cv.js"></script>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCM280LP2Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-VCM280LP2Z');
+    </script>
 </body>
 </html>
