--- a/competences.html
+++ b/competences.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="icon192.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://el-bika.github.io/Archi-TP/competences.html">
+    <link rel="canonical" href="https://el-bika.github.io/archi-tp/competences.html">
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Gestion De Compétences - Bika">
     <meta property="og:description" content="Découvrez les compétences professionnelles et techniques de Bika en design et développement web ainsi que le ui/ux design.">
     <meta property="og:image" content="Competences_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/Archi-TP/competences.html">
+    <meta property="og:url" content="https://el-bika.github.io/archi-tp/competences.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
