Enhancing SEO Content

--- a/index.html
+++ b/index.html
@@ -59,7 +59,38 @@
             <div class="about-me-content">
                 <h2>À propos de moi</h2>
                 <p>Je suis un passionné du design et du développement web, spécialisé en création de sites internet et en design graphique. Mon objectif est de concevoir des expériences utilisateurs intuitives et modernes tout en utilisant les dernières technologies du web.</p>
-                <p>Fort de plusieurs expériences et projets dans le domaine, je suis toujours à la recherche de nouveaux défis pour enrichir mes compétences et apporter ma touche créative à chaque projet.</p>
+                <p>Fort de plusieurs expériences et projets dans le domaine, je suis toujours à la recherche de nouveaux défis pour enrichir mes compétences et apporter ma touche créative à chaque projet. J'ai travaillé sur divers projets, allant de la conception de sites web pour des petites entreprises à des applications web complexes pour des clients internationaux.</p>
+                <p>En plus de mes compétences techniques, je suis également un excellent communicateur et un collaborateur efficace. J'aime travailler en équipe et je suis toujours prêt à partager mes connaissances et à apprendre des autres. Mon approche du design et du développement est centrée sur l'utilisateur, en veillant à ce que chaque projet soit non seulement fonctionnel mais aussi agréable à utiliser.</p>
+            </div>
+        </section>
+
+        <!-- Skills Section -->
+        <section class="skills">
+            <div class="skills-content">
+                <h2>Mes Compétences</h2>
+                <p>Voici un aperçu de mes compétences en design et développement web :</p>
+                <ul>
+                    <li><strong>Développement Front-End :</strong> HTML, CSS, JavaScript, React, Angular</li>
+                    <li><strong>Développement Back-End :</strong> Node.js, Express, MySQL, MongoDB</li>
+                    <li><strong>Design UI/UX :</strong> Adobe XD, Figma, Sketch</li>
+                    <li><strong>Design Graphique :</strong> Adobe Photoshop, Illustrator</li>
+                    <li><strong>Gestion de Projet :</strong> Agile, Scrum, Jira, Trello, Asana</li>
+                </ul>
+                <p>Je suis constamment à la recherche de nouvelles technologies et de nouvelles méthodes pour améliorer mes compétences et offrir des solutions innovantes à mes clients.</p>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section class="projects">
+            <div class="projects-content">
+                <h2>Mes Projets</h2>
+                <p>Découvrez quelques-uns de mes projets récents :</p>
+                <ul>
+                    <li><strong>Site Web pour une Entreprise Locale :</strong> Conception et développement d'un site web responsive pour une petite entreprise locale, avec une interface utilisateur intuitive et un design moderne.</li>
+                    <li><strong>Application Web pour une Startup :</strong> Développement d'une application web complexe pour une startup, incluant des fonctionnalités avancées et une intégration avec des services tiers.</li>
+                    <li><strong>Portfolio Personnel :</strong> Création de mon propre portfolio en ligne pour présenter mes compétences et mes projets, avec un design unique et une navigation fluide.</li>
+                </ul>
+                <p>Pour en savoir plus sur mes projets, visitez la section <a href="portfolio.html">Portfolio</a>.</p>
             </div>
         </section>
     </main>
