--- a/portfolio.html
+++ b/portfolio.html
@@ -117,6 +117,22 @@
                 </div>
             </div>
         </section>
+
+        <section class="about-projects">
+            <div class="about-projects-content">
+                <h2>À propos de mes projets</h2>
+                <p>Chacun de mes projets est une opportunité de repousser les limites de la créativité et de la technologie. Que ce soit pour des clients ou pour des projets personnels, je m'efforce de créer des designs uniques et des solutions innovantes qui répondent aux besoins spécifiques de chaque projet.</p>
+                <p>Je travaille avec une variété d'outils et de technologies pour réaliser mes projets, notamment :</p>
+                <ul>
+                    <li><strong>Illustrator :</strong> Pour la création de logos, d'affiches et d'autres éléments graphiques.</li>
+                    <li><strong>Photoshop :</strong> Pour la retouche photo et la création de visuels complexes.</li>
+                    <li><strong>Adobe XD :</strong> Pour le design UI/UX et la création de prototypes interactifs.</li>
+                    <li><strong>HTML, CSS, JavaScript :</strong> Pour le développement front-end de sites web et d'applications.</li>
+                    <li><strong>React, Angular :</strong> Pour le développement d'applications web dynamiques et interactives.</li>
+                </ul>
+                <p>Je suis toujours à la recherche de nouvelles technologies et de nouvelles méthodes pour améliorer mes compétences et offrir des solutions innovantes à mes clients. Si vous avez un projet en tête ou si vous souhaitez en savoir plus sur mon travail, n'hésitez pas à me contacter.</p>
+            </div>
+        </section>
     </main>
     
     <div id="projectModal" class="modal">
