--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,15 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCM280LP2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCM280LP2Z');
+</script>
 <body>
     <header>
         <nav>
@@ -95,14 +104,5 @@
     </footer>
 
     <script src="cv.js"></script>
-
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCM280LP2Z"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-VCM280LP2Z');
-    </script>
 </body>
 </html>
