--- a/curriculum.html
+++ b/curriculum.html
@@ -74,6 +74,7 @@
                     <p>Je suis diplômé en design et développement web, avec une spécialisation en UI/UX. J'ai également suivi plusieurs formations en ligne pour me tenir à jour avec les dernières technologies et tendances du secteur.</p>
                     <h2>Projets Personnels</h2>
                     <p>En dehors de mon travail professionnel, je développe également des projets personnels pour explorer de nouvelles idées et améliorer mes compétences. Ces projets incluent la création de sites web pour des associations locales, le développement d'applications mobiles, et la conception de supports visuels pour des événements communautaires.</p>
+                    <p>J'ai travaillé sur divers projets en tant que développeur web et designer, collaborant avec des équipes multidisciplinaires pour créer des solutions innovantes. Mon expérience inclut la conception de sites web, le développement d'applications web, et la création de designs graphiques pour des clients.</p>
                 </div>
             </div>
         </section>
