--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                     <li>Questions générales sur le design, le développement web, ou le UI/UX.</li>
                 </ul>
                 <p>Je suis particulièrement intéressé par les projets innovants qui me permettent de repousser les limites de la créativité et de la technologie. N'hésitez pas à me contacter pour discuter de vos idées et voir comment nous pouvons travailler ensemble pour les réaliser. Vous pouvez également me suivre sur GitHub et LinkedIn pour rester informé de mes dernières créations et collaborations.</p>
-            </div>
+            </div
 
             <form id="contact-form" action="submit_contact.php" method="POST">
                 <div class="form-group">
@@ -90,6 +90,7 @@
                 <button type="submit">Envoyer</button>
             </form>
         </section>
+        <p>Je suis particulièrement intéressé par les projets innovants qui me permettent de repousser les limites de la créativité et de la technologie. N'hésitez pas à me contacter pour discuter de vos idées et voir comment nous pouvons travailler ensemble pour les réaliser.</p>
     </main>
 
     <footer>
